# chain_buddy_backend

./: .env.example  .gitignore  pyproject.toml  run.py
app/: __init__.py
app/adapter/: sse_formatter.py
app/config/: env_vars.py  logger.py
app/constants/: chain_list.py  prompt.py  sse.py
app/exceptions/: __init__.py  exception_handler.py
app/resources/agent/endpoint/: agent.py
app/resources/agent/namespace/: agent.py
app/resources/agent/schema/: agent.py
app/resources/ai_trader/: app.py
app/resources/ai_trader/endpoint/: ai_trader.py
app/resources/ai_trader/namespace/: ai_trader.py
app/resources/nft/: app.py
app/resources/nft/endpoint/: nft.py
app/resources/nft/namespace/: nft.py
app/services/: ai_trader.py  transcriber.py
app/services/agent/: helper.py  initialize_agent.py  run_agent.py
app/services/agent/custom_tools/: book_ticket.py  get_balance.py  get_coin_price.py  get_tx_info.py  movie.py  nook.py
