[tool.poetry]
name = "chain-buddy-backend"
version = "0.1.0"
description = ""
authors = ["Sumit Guha <sumit03guha@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.10"
flask = "^3.1.0"
flask-restx = "^1.3.0"
flask-cors = "^5.0.0"
python-dotenv = "^1.0.1"
langchain = "^0.3.4"
langchain-openai = "^0.2.4"
langgraph = "^0.2.39"
cdp-langchain = "^0.0.8"
cdp-sdk = "^0.12.0"
cdp-agentkit-core = "^0.0.6"
tmdbv3api = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
